--- a/Sprint01/t04/style.css
+++ b/Sprint01/t04/style.css
@@ -2,26 +2,30 @@ body {
     display: flex;
     flex-direction: column;
 }
-h1 {
+h1, h2, h3 {
     text-align: center;
 }
-h2 {
-    text-align: center;
+code {
+    background-color: rgb(210, 210, 255);
 }
 
 .card_wrapper {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     float: left;
     margin-left: 4px;
+    align-self: center;
 }
 .card {
     position: relative;
     width: 270px;
     height: auto;
+    min-height: 170px;
     border-radius: 5px;
     border: 2px solid black;
-    padding: 10px;
+    padding: 5px;
     margin: 10px;
 }
 .card_text > h1 {
