--- a/Sprint01/t06/style.css
+++ b/Sprint01/t06/style.css
@@ -20,3 +20,65 @@ input[type=checkbox] {
     justify-content: center;
     width: 100%;
 }
+
+.box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
+.option {
+    color: #585893;
+    border: 1px solid #585893;
+    font-size: 1.2em;
+    border-radius: 30px;
+    padding: 18px;
+    min-width: 200px;
+    text-align: center;
+    margin: 10px 10px 20px 10px;
+    transition: background-color .1s cubic-bezier(.17,.67,.83,.67);
+}
+.option:hover {
+    background-color: #585893;
+    color: white;
+    border: 1px solid #585893;
+}
+input[type="checkbox"]:checked + .option{
+    background: #585893;;
+    color: white;
+}
+input[type="checkbox"]:checked + .option:after{
+    content: '\2713';
+    padding-left: 10px;
+}
+
+.input {
+    display: flex;
+}
+.inputdata {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid gray;
+    font-size: 15px;
+    margin-top: 20px;
+    color: #585893;
+    padding: 0 0 5px 15px;
+}
+#name {
+    margin-right: 40px;
+}
+
+.send {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 40px;
+    line-height: 50px;
+    background: rgb(230,117,137);
+    color: white;
+    font-weight: bold;
+    transition: background-color .5s cubic-bezier(.17,.67,.83,.67);
+}
+.send:hover {
+    background-color: #585893;
+}
